# numerical-algebra

./: .gitignore  README.md  README_CN.md
.github/: FUNDING.yml
happy_matrix_1/: CMakeLists.txt
happy_matrix_1/include/: Cholesky_decompose.hpp  Gauss_elimination.hpp  auxiliary.hpp  predefine.hpp  triangle_solve.hpp
happy_matrix_1/src/: main.cpp  main1.cpp  main2_1.cpp  main2_2.cpp  main3_1.cpp  main3_2.cpp
happy_matrix_123/: CMakeLists.txt  test.cpp
happy_matrix_123/include/: Cholesky_decompose.hpp  Gauss_elimination.hpp  auxiliary.hpp  predefine.hpp
happy_matrix_123/src1/: CMakeLists.txt  main1.cpp  main3_1.cpp  main3_2.cpp
happy_matrix_123/src2/: CMakeLists.txt  main_1.cpp  main_2.cpp
